--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "7.14.0",
     "@babel/preset-react": "7.13.13",
     "@babel/runtime": "7.14.0",
+    "bootstrap": "^4.6.0",
     "@buffetjs/core": "3.3.8",
     "@buffetjs/custom": "3.3.8",
     "@buffetjs/hooks": "3.3.8",
