--- a/packages/core/strapi/package.json
+++ b/packages/core/strapi/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@koa/router": "10.1.1",
     "@strapi/admin": "3.6.8",
     "@strapi/database": "3.6.8",
-    "@strapi/generators": "3.6.8",
     "@strapi/generate-new": "3.6.8",
+    "@strapi/generators": "3.6.8",
     "@strapi/logger": "3.6.8",
     "@strapi/utils": "3.6.8",
     "async": "^2.1.2",
@@ -48,7 +49,7 @@
     "koa-i18n": "^2.1.0",
     "koa-ip": "^2.0.0",
     "koa-locale": "~1.3.0",
-    "koa-router": "^7.4.0",
+    "koa-mount": "4.0.0",
     "koa-session": "^6.2.0",
     "koa-static": "^5.0.0",
     "lodash": "4.17.21",
